manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: learning-hour
  name: hello-world-deployment
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: server
          image: "${BUILD_IMAGE}:${BUILD_VERSION}"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
