manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: learning-hour
  name: hello-world-service
  labels:
    app: hello-world
spec:
  selector:
    app: hello-world
  ports:
    - name: http
      port: 8080
    - name: secret
      port: 9090
